--- a/acronyms.tex
+++ b/acronyms.tex
@@ -2,5 +2,5 @@
 \begin{longtable}{p{0.145\textwidth}p{0.8\textwidth}}\hline
 \textbf{Acronym} & \textbf{Description}  \\\hline
 
-DM & Data Management \\\hline
+PMO & Project Management Office \\\hline
 \end{longtable}
